K8S_AWS_Hero/deploy-svc-app-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-1
  # namespace: ingress-nginx
  labels:
    app: kuber-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuber-1
  template:
    metadata:
      labels:
        app: kuber-1
    spec:
      containers:
      - name: kuber-app
        image: aryanesj/jira_client_prod
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-1
  # namespace: ingress-nginx
spec:
  selector:
    app: kuber-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
