K8S_AWS_Hero/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - aryanes.pp.ua
    secretName: app-tls
  rules:
  - host: aryanes.pp.ua
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuber-service-1
            port:
              number: 80
